--- a/assets/scss/divi-style.scss
+++ b/assets/scss/divi-style.scss
@@ -387,6 +387,9 @@
 				}
 			}
 		}
+		&.dtlms-course-card {
+			box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.08);
+		}
 	
 		// stacked
 		&.dtlms-course-card-stacked {
